k8s/prod/modulith-main.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modulith-main
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modulith-main
  template:
    metadata:
      labels:
        app: modulith-main
    spec:
      containers:
        - name: modulith-main
          image: whaleplay710/petclinic-modulith-main:3.4.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: modulith-main
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: modulith-main
  ports:
    - port: 8080
      targetPort: 8080
