k8s/prod/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: whaleplay710/petclinic-notification-service:3.4.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9968
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: notification-service
  ports:
    - port: 9968
      targetPort: 9968
