k8s/prod/scheduling-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduling-service
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduling-service
  template:
    metadata:
      labels:
        app: scheduling-service
    spec:
      containers:
        - name: scheduling-service
          image: whaleplay710/petclinic-scheduling-service:3.4.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9967
---
apiVersion: v1
kind: Service
metadata:
  name: scheduling-service
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: scheduling-service
  ports:
    - port: 9967
      targetPort: 9967
